fixed the contact link and a problem with the hover on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ footer {
 }
 
 .main-header nav a {
+  display: block;
   color: #213448;
   text-decoration: none;
   font-weight: bold;
@@ -215,6 +216,16 @@ footer {
     font-size: 1rem;
     padding: 1rem;
   }
+  .main-header nav ul {
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  /* .main-header nav li {
+    /* padding: 0.rem 0; */
+    margin-bottom: 0.7rem;
+  } */
 
   footer {
     padding: 2rem;
